Fix excess bottom spacing

--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ body {
 }
 
 .main {
-    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 32px;
